front page spacing fixed (?) better left column on view editor spacing

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -160,7 +160,7 @@ body {
 
 #home {
 	height: 100px;
-	padding: 100px;
+	padding: 100px 50px 100px 50px;
 	text-align: center;
 	font-size: 2em;
 }
@@ -208,7 +208,7 @@ h3 {
 	margin: 0 0 0 50px;
 }
 .left_column{
-	width: 140px;
+	width: 180px;
 	float: left;
 }
 .left_column h3{
@@ -224,9 +224,15 @@ h3 {
 }
 .left_column table {
 	border-style: none;
+	width: 100px;
 }
 .left_column table th{
+	width: 180px;
 	padding: 5px 5px 5px 5px;
+}
+.left_column td {
+	width: 120px;
+	overflow: auto;
 }
 li {
   display: inline;
@@ -349,9 +355,9 @@ border-radius:10px;
     color: #1e3652;
 }
 .right_column {
-	width: 80%;
-	float: left;
-	margin: 0 0 0 10px;
+	width: 75%;
+	float: right;
+	margin: 0 0 0 0px;
 }
 .right_column h3 {
 	width: 100%;
@@ -452,7 +458,7 @@ tr td:last-child  {
 
 #truncated_variables{
     height:200px;
-    overflow:auto;
+    overflow: auto;
 }
 
 ul {
@@ -472,51 +478,3 @@ ul {
 	padding: 0px 20px 10px 20px;
 }
 
-.backgroundPopup{
-	display:none;
-	position:fixed;
-	_position:absolute; /* hack for internet explorer 6*/
-	height:100%;
-	width:100%;
-	top:0;
-	left:0;
-	background:#000000;
-	border:1px solid #cecece;
-	z-index:1;
-}
-.popupContact{
-	display:none;
-	position:fixed;
-	_position:absolute; /* hack for internet explorer 6*/
-	height:384px;
-	width:408px;
-	background:#FFFFFF;
-	border:2px solid #cecece;
-	z-index:2;
-	padding:12px 12px 12px 20px;
-	font-size:13px;
-	
-}
-.popupContact h1{
-	text-align:left;
-	color:#6FA5FD;
-	font-size:22px;
-	font-weight:700;
-	border-bottom:1px dotted #D3D3D3;
-	padding-bottom:2px;
-	margin-bottom:20px;
-}
-.popupContactClose{
-	font-size:14px;
-	line-height:14px;
-	right:6px;
-	top:4px;
-	position:absolute;
-	color:#6fa5fd;
-	font-weight:700;
-	display:block;
-}
-
-.trigger {
-	float: left;
-}
